JumpScript/tests/baselines/reference/importCallExpressionInScriptContext2.errors.txt
tests/cases/conformance/dynamicImport/1.jump(3,10): error TS1100: Invalid use of 'arguments' in strict mode.


==== tests/cases/conformance/dynamicImport/0.jump (0 errors) ====
    export function foo() { return "foo"; }
    
==== tests/cases/conformance/dynamicImport/1.jump (1 errors) ====
    "use strict"
    var p1 = import("./0");
    function arguments() { }
             ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.